# Changelog

## To Do

*   Check for NA/NaN/Inf in input matrices.

*   Bring back support for non-numeric data.

*   Add support for non-square confusion matrices in
    `normalized_pivoted_accuracy` and `normalized_clustering_accuracy`.


## (under development), to-be 1.3.0

*   [BACKWARD INCOMPATIBILITY]  Outlier detection based solely on whether
    a node is a leaf of a minimum spanning tree w.r.t. some mutual reachability
    distance turned out to be subpar in more detailed analysis,
    especially for smaller smoothing factors.  Note that in the previous
    versions of the package, this feature was deemed experimental;
    Hence, `detect_noise` in `genie.default` and `skip_leaves`, `preprocess`,
    and `postprocess` elsewhere are no longer available.  Instead, use the more
    powerful [`deadwood`](https://deadwood.gagolewski.com) package now.

*   [BACKWARD INCOMPATIBILITY]  `quitefastmst` version >= 0.9.1 is now required;
    the introduced backward-incompatible changes have been addressed.
    In particular, the definition of mutual reachability distances has changed.
    Unlike in Campello et al.'s 2013 paper, now the core distance is the
    distance to the *M*-th nearest neighbour, not the *(M-1)*-th one
    (not including self).

*   The new `deadwood` package is now required.  `genieclust` was heavily
    refactored; common MST-related functions and classes as well as functions
    from the `tools` and `plots` modules were moved therein.

*   [BACKWARD INCOMPATIBILITY]  `internal` module was renamed `core`.

*   [BACKWARD INCOMPATIBILITY]  Deprecated functions such as `mst_from_nn`
    have been removed.

*   [BACKWARD INCOMPATIBILITY]  `compute_full_tree` is now always True.

*   [BUGFIX]  #92: Passing a non-square confusion matrix to
    `normalized_pivoted_accuracy` and `normalized_clustering_accuracy`
    yields an error as such objects are yet to be supported.

*   [R]  `gclust` and `genie` now return the computed MST via the `mst`