@@ -6,8 +6,13 @@ This section needs to be extended.
 
 
 
-Time to perform a cluster analysis of a dataset consisting of
-1M points in $\mathbb{R}^2$:
+
+
+Thanks to [**quitefastmst**](https://quitefastmst.gagolewski.com/),
+the time to perform cluster analysis is pretty low in spaces
+of low intrinsic dimensionality.
+
+Let's perform a test on a dataset consisting of 1M points in $\mathbb{R}^2$:
 
 ```{python}
 import time
@@ -17,11 +22,37 @@ np.random.seed(123)
 n = 1_000_000
 d = 2
 X = np.random.randn(n, d)
+```
+
+Genie:
+
+```{python}
 t0 = time.time()
 g = genieclust.Genie(n_clusters=2)
 g.fit(X)
 print("Elapsed time: %.2f secs." % (time.time()-t0))
 ```
 
-Note that due to the curse of dimensionality, processing
-data with high intrinsic dimensionality is slower.
+Due to the curse of dimensionality, processing
+datasets with high intrinsic dimensionality is slower.
+
+A comparison against k-means:
+
+```{python}
+import sklearn.cluster
+t0 = time.time()
+k = sklearn.cluster.KMeans(n_clusters=2)
+k.fit(X)
+print("Elapsed time: %.2f secs." % (time.time()-t0))
+```
+
+
+A comparison against **HDBSCAN**:
+
+```{python}
+import hdbscan
+t0 = time.time()
+h = hdbscan.HDBSCAN()
+h.fit(X)
+print("Elapsed time: %.2f secs." % (time.time()-t0))
+```
